--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	var canvas1 = document.getElementById('view1');
 	var ctx = canvas1.getContext('2d');
 
+
+	//F and E are foreword, + is turn positive (cclockwise), - is turn negative (clockwise)
 	var data = String("F");
 	var rule = {
 		'F': 'F+E+',
@@ -30,9 +32,11 @@
 		system.step();
 		console.log(system.string);
 	}
-	var deltaI = 0;
-	var delta = Math.PI/2;
-	var x = 500;
+	
+	
+	var deltaI = 0;		//orientation
+	var delta = Math.PI/2;	//angle we turn when we turn
+	var x = 500;		//starting location, (x,y)
 	var y = 400;
 	ctx.moveTo(x, y);
 
@@ -68,7 +72,8 @@
 	draw();
 
 	/*
-		I think this is O(n^6) ?
+		I think this is O(n^6) ? lol
+		not sure what this even does anymore...
 	*/
 	function findMostRepeat(string){
 		for(var ii = 1; ii < string.length; ii++){//the size of the comparison string
@@ -82,11 +87,15 @@
 
 
 /*
+	//drawing every step
+
 	setInterval(function(){
 		ctx.clearRect(0, 0, canvas1.width, canvas1.height);
 		system.step();
 		draw();
 		}, 200);
+		
+	
 
 */
 
