changed strokeStyle to fillStyle so colors actually work

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ document.addEventListener("DOMContentLoaded", function(){
 
 	var data, system, renderer, canvas1, ii, kk;
 
+
+	var phoneFlag = window.matchMedia( "phone" );
+	
 	var stop = 24;
 
 	var ruleSet = [];
